set content type of long description

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,6 +7,7 @@ author_email = masatanish@gmail.com
 license = MIT
 description = docker-pid: Listing process IDs in docker containers.
 long_description = file: README.md
+long_description_content_type = text/markdown
 
 [options]
 zip_safe = False
