--- a/setup.cfg
+++ b/setup.cfg
@@ -5,16 +5,20 @@ url = https://github.com/masatanish/docker-pid
 author = Masata Nishida
 author_email = masatanish@gmail.com
 license = MIT
+license_file = LICENSE.txt
 description = docker-pid: Listing process IDs in docker containers.
 long_description = file: README.md
 long_description_content_type = text/markdown
+keywords =
+    docker\
 
 [options]
 zip_safe = False
 packages = find:
 install_requires =
-  docker
-  click
+    docker
+    click
+    tabulate
 
 [options.entry_points]
 console_scripts =
